@@ -2,7 +2,7 @@ sg3-utils (1.27-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Doug Gilbert <dgilbert@interlog.com>  Sun, 04 Jan 2009 14:45:00 -0500
+ -- Doug Gilbert <dgilbert@interlog.com>  Mon, 02 Feb 2009 23:00:00 -0500
 
 sg3-utils (1.26-0.1) unstable; urgency=low
 
