@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.27 [20090104] [svn: r205]
+Changelog for sg3_utils-1.27 [20090202] [svn: r206]
   - sg_inq: sync version descriptors with spc4r17
   - sg_map26: fix for lk 2.6.26 when CONFIG_SYSFS_DEPRECATED_V2
     is not defined
@@ -13,12 +13,13 @@ Changelog for sg3_utils-1.27 [20090104] [svn: r205]
       read-write and if that fails try opening read-only
     - experiment with of2=OFILE2; add conv=sparse
     - use posix_fadvise() to defeat caching of normal+block files
-    - when new 'nocache' flag given
+      when new 'nocache' flag given
   - sg_get_config: add OSSC feature [mmc6r02]
   - sg_modes: add ATA power condition mode page
   - sg_logs: protocol specific (SAS) lpage sync to sas2r15
   - sg3_utils.spec: correction to configure call
   - sg_pt: add scsi_pt_open_device_flags() call to public interface
+    - add scsi_pt_version() call
   - sg_cmds: add sg_cmds_open_device_flags() call previous entry
   - autotools infrastructure: changes after upgrade to Ubuntu 8.10
 
